--- a/HW2.ipynb
+++ b/HW2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +29,7 @@
        "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 1.]])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
        "        0.e+00, 1.e+00]])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
        "0.06472135948651472"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,14 +233,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
     "p = lambda z: z ** 6 - 1\n",
-    "u = lambda z: (6 * z ** 5) / (z**6 - 1)\n",
-    "u_prime = lambda z: -(6 * z ** 4 * (z**6 + 5))/((z**6 - 1)**2)\n",
+    "g = lambda z: (6 * z ** 5) / (z**6 - 1)\n",
+    "# u_prime = lambda z: -(6 * z ** 4 * (z**6 + 5))/((z**6 - 1)**2)\n",
+    "h = lambda z: g(z) ** 2 - (30 * z ** 4) / (z**6 -1)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def laguerre(x, g, h, n=6):\n",
+    "    L_p = (g(x) + np.sqrt((n - 1) * (n * h(x) - g(x) ** 2)))\n",
+    "    L_m = (g(x) - np.sqrt((n - 1) * (n * h(x) - g(x) ** 2)))\n",
     "\n",
+    "    if abs(L_p) > abs(L_m):\n",
+    "        return x - n / L_p\n",
+    "    else:\n",
+    "        return x - n / L_m\n",
+    "    \n",
     "def L(x):\n",
     "    s = np.sign((x ** 3).real)\n",
     "    z = s * x ** 3\n",
@@ -249,58 +267,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.53013141+0.51673419j 0.14189965+0.46029911j 0.6740753 +0.07785573j\n",
+      " 0.02517727+0.12611239j 0.10131498+0.5148476j  0.24918406+0.41853627j\n",
+      " 0.87188091+0.5277443j  0.05461991+0.47235878j 0.86515038+0.71532905j\n",
+      " 0.38405423+0.45272648j 0.09827786+0.32860811j 0.43890008+0.07937482j\n",
+      " 0.34473309+0.23977657j 0.41574503+0.07102615j 0.37085045+0.30000084j\n",
+      " 0.53033576+0.76635452j 0.62042105+0.07847151j 0.0637122 +0.75262976j\n",
+      " 0.67109443+0.72258173j 0.88806735+0.89234018j 0.87611121+0.61852795j\n",
+      " 0.48017803+0.06843598j 0.8552064 +0.86632597j 0.13461025+0.46835912j\n",
+      " 0.06598976+0.11381803j 0.82660892+0.3827198j  0.99069508+0.06317163j\n",
+      " 0.7230543 +0.42516171j 0.27534877+0.19127397j 0.96690434+0.6573417j\n",
+      " 0.1419764 +0.32963666j 0.9985082 +0.69422355j 0.93657562+0.13422055j\n",
+      " 0.10920798+0.83446859j 0.43699015+0.50174146j 0.72155745+0.76287791j\n",
+      " 0.50773776+0.85488213j 0.22197299+0.66954417j 0.20267703+0.03960482j\n",
+      " 0.00810559+0.53438676j 0.17552919+0.91125012j 0.00177393+0.94862155j\n",
+      " 0.44174514+0.64609797j 0.49007234+0.2878798j  0.36228915+0.4953508j\n",
+      " 0.92063572+0.09088665j 0.52147889+0.42986668j 0.89134262+0.35738636j\n",
+      " 0.31925233+0.4346279j  0.11267369+0.97862667j 0.01290981+0.31866017j\n",
+      " 0.07685882+0.72932908j 0.50713455+0.83477609j 0.87520251+0.14727276j\n",
+      " 0.56202198+0.10960437j 0.52463321+0.01841337j 0.16367683+0.70129055j\n",
+      " 0.43026254+0.00696002j 0.37094151+0.51695393j 0.40709416+0.07220542j\n",
+      " 0.92803662+0.86388104j 0.91686562+0.55091816j 0.17127032+0.07130263j\n",
+      " 0.54308898+0.29367463j 0.04235672+0.41184432j 0.88802242+0.06907241j\n",
+      " 0.13490155+0.84801513j 0.58849072+0.46334823j 0.19877797+0.37684559j\n",
+      " 0.47707547+0.11951171j 0.78946854+0.74804817j 0.1230031 +0.14256424j\n",
+      " 0.81558053+0.25434269j 0.34247633+0.50788062j 0.64250836+0.46382039j\n",
+      " 0.27207918+0.27738038j 0.76171186+0.93016396j 0.2252974 +0.26073371j\n",
+      " 0.23926898+0.70076512j 0.82074915+0.48604678j 0.88065591+0.70838158j\n",
+      " 0.92712025+0.94896084j 0.5382327 +0.17068187j 0.88813997+0.05250247j\n",
+      " 0.07246511+0.16703452j 0.88174403+0.15784493j 0.79908595+0.70843597j\n",
+      " 0.97542125+0.904745j   0.47532933+0.79814281j 0.41060058+0.65177322j\n",
+      " 0.85650947+0.53083387j 0.16131987+0.73798929j 0.81178681+0.69828539j\n",
+      " 0.23919759+0.94880458j 0.88507249+0.43260673j 0.87677377+0.88060181j\n",
+      " 0.47344942+0.84661178j 0.56547783+0.66531001j 0.20562438+0.20026385j\n",
+      " 0.87888014+0.957504j  ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "rand_p = np.apply_along_axis(lambda args: [complex(*args)], 0, np.random.rand(2,100))[0]\n",
+    "print(rand_p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def laguerre(x, u, u_prime, n=6):\n",
-    "    L_p = n / (-u(x) + np.sqrt((n - 1) * (-n * u_prime(x) - u(x) ** 2)))\n",
-    "    L_m = n / (-u(x) - np.sqrt((n - 1) * (-n * u_prime(x) - u(x) ** 2)))\n",
-    "    if np.abs(L_p) > np.abs(L_m):\n",
-    "        return x - L_p\n",
-    "    else:\n",
-    "        return x - L_m\n",
-    "    "
+    "lag = []\n",
+    "an = []\n",
+    "for c in rand_p:\n",
+    "    lag.append(laguerre(c, g, h))\n",
+    "    an.append(L(c))\n",
+    "lag = np.array(lag)\n",
+    "an = np.array(an)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "10.208000000000004"
+       "3.535411739111698e-31"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "laguerre(5, u, u_prime)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.1926153846153846"
-      ]
-     },
-     "execution_count": 51,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "L(5)"
+    "(abs((lag - an))**2).mean()"
    ]
   },
   {
